系统配置和财务管理

--- a/src/assets/css/green-theme/index.less
+++ b/src/assets/css/green-theme/index.less
@@ -74,9 +74,35 @@ a{
     }
 }
 
-.addbutton{
+.addbutton,
+.singlebutton{
     margin-bottom: 24px;
 }
+
+.page {
+    margin-top: 10px;
+}
+
+
+.eidthform {
+    .ivu-modal-header p {
+      text-align: center;
+      font-size: 16px;
+      color: #0b9595;
+      font-weight: 400;
+      padding-top: 24px;
+      height: auto;
+    }
+  
+    .button-box {
+      text-align: center;
+      padding-bottom: 24px;
+  
+      button {
+        margin: 0 4px;
+      }
+    }
+  }
 
 .clearfix{
     *zoom: 1;
