--- a/src/assets/css/green-theme/index.less
+++ b/src/assets/css/green-theme/index.less
@@ -12,6 +12,11 @@
     line-height: 32px;
 }
 
+.ivu-input[disabled],
+fieldset[disabled] .ivu-input{
+    color: #333;
+}
+
 // 私有化覆盖不了
 .sidebar .nav .ivu-icon-ios-arrow-down:before {
     content: "\F217";
