--- a/src/assets/css/green-theme/index.less
+++ b/src/assets/css/green-theme/index.less
@@ -72,10 +72,13 @@ a{
     bottom:0;
     width: auto;
     box-sizing: border-box;
-    overflow-y: scroll;
 
     .router-box{
         padding: 20px;
+        height: 100%;
+        width: 100%;
+        padding-bottom: 100px;
+        overflow-y: scroll;
     }
 }
 
